device-section added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Website Title -->
     <title>Lucid</title>
 
+    <!-- Favicon -->
+    <link rel="icon" type="text/image" href="assets/img/favicon.png">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap/css/bootstrap.min.css">
 
@@ -43,16 +46,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                      <a class="nav-link" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Testimonials</a>
+                      <a class="nav-link" href="#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Pricing</a>
@@ -98,7 +101,7 @@
 
 
     <!-- Features Section Start -->
-    <section class="feature-section">
+    <section class="feature-section" id="features">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 features-title section-title">
@@ -145,6 +148,71 @@
     </section>
     <!-- Features Section End -->
    
+
+    <!-- Device Section Start -->
+    <section class="device-section" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5">
+            <img src="assets/img/devices.png" alt="Device Phone" class="img-fluid">
+          </div>
+
+          <div class="col-lg-6 offset-lg-1 device-title section-title">
+            <h6>Dip into the details</h6>
+            <h2>Beautiful on every device</h2>
+            <span></span>
+
+            <div class="device-content">
+              <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. </p>
+
+              <ul>
+                <li>
+                  <i class="fa-solid fa-trophy"></i>
+                  <h5>Awesome design</h5>
+                </li>
+
+                <li>
+                  <i class="fa-solid fa-computer-mouse"></i>
+                  <h5>Fully responsive</h5>
+                </li>
+
+                <li>
+                  <i class="fa-solid fa-bolt"></i>
+                  <h5>Retina ready</h5>
+                </li>
+
+                <li>
+                  <i class="fa-solid fa-gauge-high"></i>
+                  <h5>Tons of features and easy to use</h5>
+                </li>
+              </ul>
+            </div>            
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Device Section End -->
+
+
+    <!-- Customize Section Start -->
+    <section class="customize-section" id="testimonials">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-5 customize-content section-title">
+            <h6>Dip into the details</h6>
+            <h2>Super easy to customize</h2>
+            <span></span>
+
+            <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+          </div>
+
+          <div class="col-lg-7">
+            <img src="assets/img/iPhone.png" alt="iPhone" class="iPhone-image">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Customize Section End -->
 
 
     <!-- Jquery JS -->
