--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- Hero Section Start -->
             <section class="hero-section">
               <div class="container">
-                <div class="row">
+                <div class="row align-items-center hero-row">
                   <div class="col-lg-6 banner">
                     <h6>introducing lucid theme</h6>
                     <h1>Carefully crafted and beautiful landing page.</h1>
