new section added

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/vendor/bootstrap/css/bootstrap.min.css">
 
-    <!-- Font Awesome -->
+    <!-- Font Awesome CSS-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/vendor/animate/animate.css">
+
+    <!-- Owl Carousel CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/vendor/owl/css/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendor/owl/css/owl.theme.default.min.css">
 
     <!-- Theme CSS Files -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
   </head>
 
 
@@ -149,20 +156,20 @@
     <!-- Features Section End -->
    
 
-    <!-- Device Section Start -->
-    <section class="device-section" id="about">
+    <!-- About Section Start -->
+    <section class="about-section" id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
-            <img src="assets/img/devices.png" alt="Device Phone" class="img-fluid">
+            <img src="assets/img/devices.png" alt="About Phone" class="img-fluid">
           </div>
 
-          <div class="col-lg-6 offset-lg-1 device-title section-title">
+          <div class="col-lg-6 offset-lg-1 about-title section-title">
             <h6>Dip into the details</h6>
             <h2>Beautiful on every device</h2>
             <span></span>
 
-            <div class="device-content">
+            <div class="about-content">
               <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. </p>
 
               <ul>
@@ -191,14 +198,14 @@
         </div>
       </div>
     </section>
-    <!-- Device Section End -->
+    <!-- About Section End -->
 
 
-    <!-- Customize Section Start -->
-    <section class="customize-section" id="testimonials">
+    <!-- Device Section Start -->
+    <section class="device-section" id="about">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-lg-5 customize-content section-title">
+          <div class="col-lg-5 device-content section-title">
             <h6>Dip into the details</h6>
             <h2>Super easy to customize</h2>
             <span></span>
@@ -212,14 +219,318 @@
         </div>
       </div>
     </section>
-    <!-- Customize Section End -->
+    <!-- Device Section End -->
+
+
+    <!-- Testimonials Section Start -->
+    <section class="testimonials-section" id="testimonials">
+      <div class="container">
+         <div class="row">
+          <div class="col-lg-12 features-title section-title">
+            <h6>Dip into the details</h6>
+            <h2>Testimonials</h2>
+            <span></span>
+          </div>
+        </div>
+
+        <div class="owl-carousel">
+          <div class="slide-item">
+            <div>
+              <p><i>Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</i></p>
+              <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man 1.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>John Doe</p>
+                  <h6>CEO, The Rivers Company</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class=" slide-item">
+            <div>
+              <p><i>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</i></p>
+              <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>Dean Winchester</p>
+                  <h6>UX DESIGNER, GOOGLE INC.</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <div class="slide-item">
+            <div>
+              <p><i>Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</i></p>
+              <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man 1.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>John Doe</p>
+                  <h6>CEO, The Rivers Company</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class=" slide-item">
+            <div>
+              <p><i>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</i></p>
+             <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>Dean Winchester</p>
+                  <h6>UX DESIGNER, GOOGLE INC.</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <div class="slide-item">
+            <div>
+              <p><i>Once upon a time all the Rivers combined to protest against the action of the Sea in making their waters salt. “When we come to you,” said they to the Sea.</i></p>
+              <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man 1.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>John Doe</p>
+                  <h6>CEO, The Rivers Company</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class=" slide-item">
+            <div>
+              <p><i>A shoe is not only a design, but it's a part of your body language, the way you walk. The way you're going to move is quite dictated by your shoes.</i></p>
+              <div class="slide-man">
+                <div>
+                  <img src="assets/img/price_man.png" alt="">
+                </div>
+                <div class="slide-intro">
+                  <p>Dean Winchester</p>
+                  <h6>UX DESIGNER, GOOGLE INC.</h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonials Section End -->
+
+
+    <!-- Add Section Start -->
+    <section class="add-section" id="testimonials">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <h2>Like what you see? <span>Get this great theme now!</span></h2>
+          </div>
+          <div class="col-lg-4 text-end">
+            <ul>
+                <li>
+                  <a href="" class="btn btn-all">view features</a>
+                </li>
+                <li>  
+                  <a href=""  class="btn btn-all ms-3">download now</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Add Section End -->
+
+
+    <!-- Pricing Section Start -->
+    <section class="pricing-section" id="pricing">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 features-title section-title">
+            <h6>quality has its price</h6>
+            <h2>Pricings & Plans</h2>
+            <span></span>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-3">
+            <div class="price-tbl">
+              <h2>free</h2>
+              <div class="price">
+                <h1><sup>$</sup>0</h1>
+                <p>/per month</p>
+              </div>
+              <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span style="color: #008ED6 "> lacinia</span> consectetur.</p>
+              <a href="" class="btn button">order now</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="price-tbl">
+              <h2>personal</h2>
+              <div class="price">
+                <h1><sup>$</sup>25</h1>
+                <p>/per month</p>
+              </div>
+              <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span style="color: #008ED6 "> lacinia</span> consectetur.</p>
+              <a href="" class="btn button">order now</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="price-tbl">
+              <h2>business</h2>
+              <div class="price">
+                <h1><sup>$</sup>50</h1>
+                <p>/per month</p>
+              </div>
+              <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span style="color: #008ED6 "> lacinia</span> consectetur.</p>
+              <a href="" class="btn button">order now</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="price-tbl">
+              <h2>ultimate</h2>
+              <div class="price">
+                <h1><sup>$</sup>99</h1>
+                <p>/per month</p>
+              </div>
+              <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum <span style="color: #008ED6 "> lacinia</span> consectetur.</p>
+              <a href="" class="btn button">order now</a>
+            </div>
+          </div>
+        </div>
+      </div>  
+    </section>
+    <!-- Pricing Section End -->
+
+
+    <!-- Contact Section Start -->
+    <section class="contact-section" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 features-title section-title">
+            <h6>stay in touch</h6>
+            <h2>Contact us</h2>
+            <span></span>
+          </div>
+        </div>
+
+        <div class="row">  
+          <div class="col-lg-4 contact-content ">
+            <div class="icon-border">
+              <i class="fa-solid fa-mobile-screen"></i>
+            </div>
+            <p>Phone: (415) 124-5678</p>
+            <p>Fax: (412) 123-8290</p>
+          </div>
+
+          <div class="col-lg-4 contact-content location ">
+            <div class="icon-border">
+              <i class="fa-solid fa-location-dot"></i>
+            </div>
+            <p>1001 Brickell Bay Dr.
+            Suite 1900 
+            Miami, FL 33131</p>
+          </div>
+
+          <div class="col-lg-4 contact-content ">
+            <div class="icon-border">
+              <i class="fa-regular fa-envelope"></i>
+            </div>
+            <p>support@yourname.com</p>
+          </div>
+        </div>
+
+        <div class="form-box">
+          <form>
+            <div class="row">
+              <div class="col-lg-6">
+                <input type="text" placeholder="NAME *" class="form-control mb-3">
+                <input type="text" placeholder="EMAIL *" class="form-control mb-3">
+                <input type="text" placeholder="SUBJECT *" class="form-control mb-3">
+              </div>
+
+              <div class="col-lg-6">
+                <textarea name="" placeholder="MESSAGE *" class="form-control mb-3" id="" cols="30" rows="6"></textarea>
+                <input type="submit" value="SEND MESSAGE">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!-- Contact Section End -->
+
+
+    <!-- Map Section Start -->
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58428.67552125422!2d90.33161235204169!3d23.75478777719394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c70b72f1b8b1%3A0xfc87a1bc6699ed26!2sShikhbe%20Shobai!5e0!3m2!1sen!2sbd!4v1692210812875!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <!-- Map Section End -->
+
+
+    <!-- Footer Section Start -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 wow">
+            <ul>
+              <li class="wow fadeInLeft" data-wow-delay=".3s">
+                <a href=""><i class="fa-brands fa-behance"></i></a>
+              </li>
+              <li class="wow fadeInLeft" data-wow-delay=".6s">
+                <a href=""><i class="fa-brands fa-dribbble"></i></a>
+              </li>
+              <li class="wow fadeInLeft" data-wow-delay=".9s">
+                <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              </li>
+              <li class="wow fadeInLeft" data-wow-delay="1.2s">
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+              </li>
+              <li class="wow fadeInLeft" data-wow-delay="1.5s">
+                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 wow">
+            <div class="wow fadeInRight">
+              <p>copyright &copy; 2023 lucid onepage theme</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Section End -->
 
 
     <!-- Jquery JS -->
     <script src="assets/js/jquery.min.js"></script>
     <!-- Bootstrap Budle JS -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Owl Carousel JS -->
+    <script src="assets/vendor/owl/js/owl.carousel.min.js"></script>
     <!-- Theme JS -->
     <script src="assets/js/main.js"></script>
+    <!-- WOW JS Active -->
+    <script src="assets/vendor/wow/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
