--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
                 <!-- Mobile Responsive Menu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                  <span class="navbar-toggler-i">
+                    <i class="fa-solid fa-bars"></i>
+                  </span>
                 </button>
 
                 <!-- Menu Items Start -->
@@ -93,7 +95,8 @@
                     </ul>
                   </div>
                   <div class="col-lg-6 b_phone">
-                    <img src="assets/img/b_phone.png" alt="">
+                    <img src="assets/img/b_phone.png" alt="" class="img-fluid hide_mb">
+                    <img src="assets/img/devices.png" alt="About Phone" class="img-fluid hide_dsk">
                   </div>
                 </div>
               </div>
@@ -119,7 +122,7 @@
         </div>
 
         <div class="row">  
-          <div class="col-lg-3 feature-content ">
+          <div class="col-lg-3 col-sm-6 feature-content ">
             <div class="icon-border">
               <i class="fa-solid fa-display"></i>
             </div>
@@ -127,7 +130,7 @@
             <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.</p>
           </div>
 
-          <div class="col-lg-3 feature-content ">
+          <div class="col-lg-3 col-sm-6 feature-content ">
             <div class="icon-border">
               <i class="fa-solid fa-gear"></i>
             </div>
@@ -135,7 +138,7 @@
             <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.</p>
           </div>
 
-          <div class="col-lg-3 feature-content ">
+          <div class="col-lg-3 col-sm-6 feature-content ">
             <div class="icon-border">
               <i class="fa-regular fa-thumbs-up"></i>
             </div>
@@ -143,7 +146,7 @@
             <p>Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.</p>
           </div>
 
-         <div class="col-lg-3 feature-content ">
+         <div class="col-lg-3 col-sm-6 feature-content ">
             <div class="icon-border">
               <i class="fa-solid fa-mobile-screen"></i>
             </div>
@@ -364,7 +367,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <div class="price-tbl">
               <h2>free</h2>
               <div class="price">
@@ -376,7 +379,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <div class="price-tbl">
               <h2>personal</h2>
               <div class="price">
@@ -388,7 +391,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <div class="price-tbl">
               <h2>business</h2>
               <div class="price">
@@ -400,7 +403,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <div class="price-tbl">
               <h2>ultimate</h2>
               <div class="price">
@@ -429,16 +432,16 @@
         </div>
 
         <div class="row">  
-          <div class="col-lg-4 contact-content ">
-            <div class="icon-border">
+          <div class="col-lg-4 col-sm-4 contact-content ">
+            <div class="icon-box">
               <i class="fa-solid fa-mobile-screen"></i>
             </div>
             <p>Phone: (415) 124-5678</p>
             <p>Fax: (412) 123-8290</p>
           </div>
 
-          <div class="col-lg-4 contact-content location ">
-            <div class="icon-border">
+          <div class="col-lg-4 col-sm-4 contact-content location ">
+            <div class="icon-box">
               <i class="fa-solid fa-location-dot"></i>
             </div>
             <p>1001 Brickell Bay Dr.
@@ -446,8 +449,8 @@
             Miami, FL 33131</p>
           </div>
 
-          <div class="col-lg-4 contact-content ">
-            <div class="icon-border">
+          <div class="col-lg-4 col-sm-4 contact-content ">
+            <div class="icon-box">
               <i class="fa-regular fa-envelope"></i>
             </div>
             <p>support@yourname.com</p>
